Adding article specific endpoint with id (#16)
* adding article by id endpoint

* change order by to asscending

* updating app with GET,POST capabilities for articles
