# crawler_consumer/python/crawler_consumer/app.py
@@ -40,16 +40,31 @@ app.config['MYSQL_DATABASE_CHARSET'] = 'utf8mb4'
 from lib.models import *
 from lib.encoder import *
 
+
+
 def paginate_articles(page=1, per_page=10):
     article_list = []
     try:
         encoder = ConsumerJSONEncoder()
         ##TODO: handle page, per_page strings better
-        items = Article.query.order_by(Article.id.desc()).paginate(int(page), int(per_page)).items
+        items = Article.query.order_by(Article.id.asc()).paginate(int(page), int(per_page)).items
         article_list = [encoder.default(x) for x in items if x]
     except Exception:
         log.info("could not get article list", exc_info=True)
     return article_list
+
+def fetch_article(article_id):
+    article = None
+    try:
+        encoder = ConsumerJSONEncoder()
+        item = Article.query.get(article_id)
+        if (item):
+            log.info("article found with id: " + str(article_id))
+            article = encoder.default(item)
+    except Exception:
+        log.info("could not get article by id", exc_info=True)
+    return article
+
 
 @app.route('/')
 def get_root():
@@ -67,3 +82,19 @@ def get_articles():
     log.info("page: " + str(page) + " per_page: " + str(per_page))
     articles = paginate_articles(page, per_page)
     return jsonify(articles)
+
+@app.route('/articles/<int:article_id>', methods=["GET"])
+def get_article_by_id(article_id):
+    page = request.args.get('article_id', None)
+    log.info("article id: " + str(article_id))
+    article = fetch_article(article_id)
+    return jsonify(article)
+
+@app.route('/articles/<int:article_id>', methods=["UPDATE", "POST"])
+def update_article_by_id(article_id):
+    log.info("article id: " + str(article_id))
+    data = request.form
+    ##TODO: properly deserialize data and update article
+    app.logger.info("data received from post: " + str(data))
+    article = fetch_article(article_id)
+    return jsonify(article)
